--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Sandip Chhetry</h2>
+	<img src="pp.jpg" alt"self picture">
+	<a href="https://www.linkedin.com/in/sandip-chhetry-390115107/" target="_self">LinkedIn</a>
+	<section id="skills">Skill : Java, CSS, Excel, Tableau, SQL</section>
+	<section id="projects">Project : Portfolio</section>
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
