--- a/main.html
+++ b/main.html
@@ -8,12 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2>Sandip Chhetry</h2>
+	<h1>Sandip Chhetry</h1>
 	<img src="pp.jpg" alt"self picture">
 	<a href="https://www.linkedin.com/in/sandip-chhetry-390115107/" target="_self">LinkedIn</a>
 	<section id="skills">Skill : Java, CSS, Excel, Tableau, SQL</section>
-	<section id="projects">Project : Portfolio</section>
-		
+	<section id="projects">Project : Portfolio
+	<ul> 
+		<li>Trivia</li>
+		<li>Hello Accio Job</li>
+		<li>Semantic NAV bar</li>
+	</ul>
+	</section>	
     <script type="text/javascript" src="./script.js">
 </script>
 
